# tmc_manipulation_base

tmc_collision_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_collision_detector/include/tmc_collision_detector/: ODE_collision_detector.hpp  collision_detector.hpp  collision_detector_exception.hpp
tmc_collision_detector/src/: ODE_collision_detector.cpp
tmc_collision_detector/test/: cylinder.stl  gtest_collision_detector.cpp
tmc_manipulation_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_manipulation_tests/include/tmc_manipulation_tests/: configs.hpp
tmc_manipulation_tests/meshes/hsra/: BASE_1.stl  BASE_2.stl  BASE_3.stl  BASE_4.stl  BASE_5.stl  BASE_6.stl  ELBOW_P.stl  HEAD_COVER.stl  LINEAR_1.stl  LINEAR_2.stl  LINEAR_3.stl  NECK_Y.stl  SHOULDER_P.stl  SHOULDER_R.stl  SHOULDER_Y.stl  TABLET.stl  WRIST_P_1.stl  WRIST_P_2.stl  WRIST_R.stl  WRIST_Y_1.stl  WRIST_Y_2.stl  WRIST_Y_3.stl  WRIST_Y_4.stl  finger_11.stl  finger_12.stl  finger_21.stl  finger_22.stl
tmc_manipulation_tests/robots/hsra/: collision_pair_hsra.xml  filters.yaml  joint_limits.yaml  upload_hsra.launch
tmc_manipulation_tests/robots/stanford_manipulator/: collision_detect_stanford.xml  upload_stanford_manipulator.launch
tmc_manipulation_tests/src/: configs.cpp
tmc_manipulation_tests/urdf/hsra/: hsra.urdf
tmc_manipulation_tests/urdf/hsrb/: hsrb4s.urdf
tmc_manipulation_tests/urdf/hsrc/: hsrc1s.urdf
tmc_manipulation_tests/urdf/stanford_manipulator/: stanford.urdf
tmc_manipulation_types/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_manipulation_types/include/tmc_manipulation_types/: manipulation_types.hpp  utils.hpp
tmc_manipulation_types/src/tmc_manipulation_types/: utils.cpp
tmc_manipulation_types/test/: manipulation_types-test.cpp  utils-test.cpp
tmc_manipulation_types_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_manipulation_types_bridge/include/tmc_manipulation_types_bridge/: manipulation_msg_convertor.hpp
tmc_manipulation_types_bridge/src/: manipulation_msg_convertor.cpp
tmc_manipulation_types_bridge/test/: equality_check.hpp  manipulation_msg_convertor-test.cpp  manipulation_msg_convertor-test.hpp  test_data.hpp
tmc_robot_collision_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_robot_collision_detector/include/tmc_robot_collision_detector/: collision_detector_config.hpp  object_for_dump.hpp  robot_collision_detector.hpp  robot_collision_detector_common.hpp
tmc_robot_collision_detector/src/: collision_detector_config.cpp  collision_detector_factory.cpp  collision_detector_factory.hpp  robot_collision_detector.cpp
tmc_robot_collision_detector/test/: collision_detector_config-test.cpp  robot_collision_detector-test.cpp
tmc_robot_collision_detector/test/gtest/: incorrect_coldet_config.xml  incorrect_robot_model.xml  non_exist_group_contact.xml  test_config.xml  too_many_group_config.xml
tmc_robot_kinematics_model/: CHANGELOG.rst  CMakeLists.txt  fk_plugins.xml  ik_plugins.xml  package.xml
tmc_robot_kinematics_model/include/tmc_robot_kinematics_model/: ik_solver.hpp  numeric_ik_solver.hpp  pinocchio_wrapper.hpp  robot_kinematics_model.hpp
tmc_robot_kinematics_model/src/: numeric_ik_solver.cpp  pinocchio_wrapper.cpp
tmc_robot_kinematics_model/test/: kinematics_model-test.hpp  pinocchio_wrapper-test.cpp  test_numeric_ik_urdf.cpp
