<package format="3">
  <name>tmc_collision_detector</name>
  <version>2.0.0</version>
  <description>Collision detection library</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <url type="website">None</url>

  <author>Keisuke Takeshita</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>opende</depend>
  <depend>tmc_manipulation_types</depend>
  <depend>tmc_stl_loader</depend>

  <build_depend>eigen</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>geometric_shapes</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>