<package format="3">
  <name>tmc_manipulation_tests</name>
  <version>2.0.0</version>
  <description>Robot models for testing packages related to manipulation</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <url type="website">None</url>

  <author>Keisuke Takeshita</author>
  <author>Koji Terada</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>