<package format="3">
  <name>tmc_manipulation_types_bridge</name>
  <version>2.0.0</version>
  <description>Conversion library for manipulation</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <url type="website">None</url>

  <author>Keisuke Takeshita</author>
  <author>Koji Terada</author>
  <author>Satoru Onoda</author>
  <author>Takao Yasuda</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_eigen</depend>
  <depend>tmc_manipulation_types</depend>
  <depend>tmc_planning_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>