<package format="3">
  <name>tmc_robot_kinematics_model</name>
  <version>2.0.0</version>
  <description>robot_kinematics</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <url type="website">None</url>

  <author>Keisuke Takeshita</author>
  <author>Koji Terada</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>tmc_manipulation_types</depend>

  <build_depend>eigen</build_depend>

  <depend>pinocchio</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>tmc_manipulation_tests</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>